Modificado arquivo .sass para .scss

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Minha Loja Virtual</title>
+  <title>Base para aplicações NodeJS</title>
 </head>
 <body>
-  <%= title %>
+  <h1 class="text-center"><%= title %></h1>
 </body>
 </html>
