Adicionado informações sobre autor e instituição para as view inicial

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,13 @@
   <title>Base para aplicações NodeJS</title>
 </head>
 <body>
-  <h1 class="text-center"><%= title %></h1>
+  <div class="text-center">
+    <br />
+    <img src="/image/marcaifms.png" alt="IFMS">
+    <br /><br />
+    <h1><%= title %></h1>
+    <h3><%= subtitle %></h3>
+    <p>Autor: Prof. Me. Luiz Picolo</p>
+</div>
 </body>
 </html>
